--- a/.gitignore
+++ b/.gitignore
@@ -82,6 +82,8 @@ target/
 profile_default/
 ipython_config.py
 
+AGENTS.MD
+
 # pyenv
 #   For a library or package, you might want to ignore these files since the code is
 #   intended to run in multiple environments; otherwise, check them in:
@@ -208,3 +210,4 @@ __marimo__/
 
 logs
 config
+dbt/profiles.yml
